// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner renders large spinner 1`] = `
<svg
  class="lg_spinner"
  data-cy="spinner"
  viewBox="0 0 43 43"
>
  <g
    class="spinner"
  >
    <circle
      class="spinner_inner"
      cx="21.5"
      cy="21.5"
      fill="none"
      r="20"
    />
    <circle
      class="spinner_outer"
      cx="21.5"
      cy="21.5"
      fill="none"
      r="20"
    />
  </g>
</svg>
`;

exports[`Spinner renders medium spinner 1`] = `
<svg
  class="md_spinner"
  data-cy="spinner"
  viewBox="0 0 43 43"
>
  <g
    class="spinner"
  >
    <circle
      class="spinner_inner"
      cx="21.5"
      cy="21.5"
      fill="none"
      r="20"
    />
    <circle
      class="spinner_outer"
      cx="21.5"
      cy="21.5"
      fill="none"
      r="20"
    />
  </g>
</svg>
`;

exports[`Spinner renders small spinner 1`] = `
<svg
  class="sm_spinner"
  data-cy="spinner"
  viewBox="0 0 43 43"
>
  <g
    class="spinner"
  >
    <circle
      class="spinner_inner"
      cx="21.5"
      cy="21.5"
      fill="none"
      r="20"
    />
    <circle
      class="spinner_outer"
      cx="21.5"
      cy="21.5"
      fill="none"
      r="20"
    />
  </g>
</svg>
`;

exports[`Spinner renders small spinner with overlay 1`] = `
<svg
  class="sm_spinner"
  data-cy="spinner"
  viewBox="0 0 43 43"
>
  <g
    class="spinner"
  >
    <circle
      class="spinner_inner"
      cx="21.5"
      cy="21.5"
      fill="none"
      r="20"
    />
    <circle
      class="spinner_outer"
      cx="21.5"
      cy="21.5"
      fill="none"
      r="20"
    />
  </g>
</svg>
`;
